# QMemos

./: .gitignore  .gitmodules  CMakeLists.txt  MemosPage.qml  QMemos.pro  QMemosAll.pro  QMemos_en_US.ts  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  qmc.cpp  qmc.pro  quickmemo.cpp  quickmemo.h  quickmemo.ui  readme.md  wrapper.cpp  wrapper.h
QHotkey/: CMakeLists.txt
QMemos/: CMakeLists.txt  IniConfig.cpp  IniConfig.h  QMemos.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quickmemo.cpp  quickmemo.h  quickmemo.ui
QMemos/res/: res.qrc
QMemos/test/: apitest.cpp  apitest.h
qmc/: main.cpp  qmc.pro  wrapper.cpp  wrapper.h
res/: res.qrc
